新增 API 錯誤日誌查詢